[package]
name = "web"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]

[dependencies]
# ctx = { git = "https://github.com/rkusa/ctx.git" }
ctx = { path = "../ctx" }
futures = "0.1"
hyper = "0.11"

[dev-dependencies]
futures-await = { git = "https://github.com/alexcrichton/futures-await" }
tokio-timer = "0.1"
futures-cpupool = "0.1"
