[package]
name = "web"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]

[dependencies]
failure = "0.1"
futures = "0.1"
hyper = "0.12"
http = "0.1"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
futures-await = { git = "https://github.com/alexcrichton/futures-await" }
tokio-timer = "0.2"
futures-cpupool = "0.1"

[features]
default = ["json"]
json = ["serde", "serde_json"]
